--- a/core/mixins/_box-shadow.scss
+++ b/core/mixins/_box-shadow.scss
@@ -1,3 +1,6 @@
+@charset "UTF-8";
+
+//使用方法：box-shadow(0px 0px 5px 2px #888888);
 @mixin box-shadow($shadow...){
     -webkit-box-shadow:$shadow;
     -moz-box-shadow:$shadow;
